--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <header class="section-header">
                     <h2 class="section-title">Personal Profile</h2>
                     <div class="spacer"></div>
-                    <p class="section-subtitle" style="font-size: 22pt">I build awesome websites that create fun user experiences.</p>
+                    <p class="section-subtitle">I build awesome websites that create fun user experiences.</p>
                 </header>
             <div class="row">
               <div class="col-md-3">
@@ -126,43 +126,49 @@
                  <header class="section-header" id="skills-header">
                     <h2 class="section-title"><span>Skills</span></h2>
                       <div class="spacer"></div>
-                    <p class="section-subtitle" style="font-size: 22pt">I am a Full-Stack Web Developer</p>
+                    <p class="section-subtitle">I am a Full-Stack Web Developer. The "D" is silent...</p>
                 </header>
             <div class="row">
               <div class="col-md-2">
                <!--<span class="chart" data-percent="95">-->
                       <!--<span class="percent"></span>-->
-                      <h3 class="skills"><img src="img/python-icon.png" /></h3>
+                      <h3 class="skills"><img src="img/python-icon.png" />Python</h3>
                </span>
             </div>
                <div class="col-md-2 ">
                <!--<span class="chart" data-percent="60">-->
                       <!--<span class="percent"></span>-->
-                      <h3 class="skills"><img src="img/django-icon.png" /></h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <!--<span class="chart" data-percent="75">-->
-                      <!--<span class="percent"></span>-->
-                       <h3 class="skills"><img src="img/HTML5_icon3.png" /></h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <!--<span class="chart" data-percent="80">-->
-                      <!--<span class="percent"></span>-->
-                      <h3 class="skills"><img src="img/CSS3_icon6.png" /></h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <!--<span class="chart" data-percent="65">-->
-                      <!--<span class="percent"></span>-->
-                      <h3 class="skills"><img src="img/bootstrap_icon.png" /></h3>
+                      <h3 class="skills"><img src="img/django-icon.png" />Django</h3>
                </span>
             </div>
                <div class="col-md-2">
                <!--<span class="chart" data-percent="85">-->
                       <!--<span class="percent"></span>-->
-                       <h3 class="skills"><img src="img/angularjs-logo.png" /></h3>
+                       <h3 class="skills"><img src="img/jquery_icon.png" />jQuery</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <!--<span class="chart" data-percent="85">-->
+                      <!--<span class="percent"></span>-->
+                       <h3 class="skills"><img src="img/angularjs-logo.png" />AngularJS</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <!--<span class="chart" data-percent="75">-->
+                      <!--<span class="percent"></span>-->
+                       <h3 class="skills"><img src="img/HTML5_icon3.png" />HTML5</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <!--<span class="chart" data-percent="80">-->
+                      <!--<span class="percent"></span>-->
+                      <h3 class="skills"><img src="img/CSS3_icon6.png" />CSS3</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <!--<span class="chart" data-percent="65">-->
+                      <!--<span class="percent"></span>-->
+                      <h3 class="skills"><img src="img/bootstrap_icon.png" />Bootstrap</h3>
                </span>
             </div>
           </div>
@@ -174,7 +180,7 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Education</span></h2>
                      <div class="spacer"></div>
-                    <p class="section-subtitle" style="font-size: 22pt">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
                 </header>
                 <div class="row">
                  <div class="col-md-6">
@@ -204,7 +210,7 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Experience</span></h2>
                      <div class="spacer"></div>
-                    <p class="section-subtitle" style="font-size: 22pt">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
                 </header>
                 <div class="row">
                  <div class="col-md-4">
@@ -244,7 +250,7 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Portfolio</span></h2>
                       <div class="spacer"></div>
-                    <p class="section-subtitle" style="font-size: 22pt">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
                 </header>
            
                 <div id="grid-controls-wrapper">
@@ -301,7 +307,7 @@
               <header class="section-header">
                   <h2 class="section-title"><span>Contact</span></h2>
                     <div class="spacer"></div>
-                       <p class="section-subtitle" style="font-size: 22pt">To reach out to me, please feel free to call or email.<br>
+                       <p class="section-subtitle">To reach out to me, please feel free to call or email.<br>
                        I would be happy to hear from you!</p>
               </header>
         <div class="row">
