A few styling changes and content changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="col-md-3">
                  <div class="profile"><img src="img/carry.jpg" alt="profile"/></div>
               </div>
-               <div class="col-md-9" style="font-size: 16pt">
+               <div class="col-md-9">
                 <p>I worked as a recruiter for over ten years.  I made good money, but rarely found happiness in what I was doing for a living.  Money isn't everything.  I realized that I needed to make a change.  I decided to return to school and complete my Bachelor's Degree at the University of Utah.</p>
                 <p>It wasn't long before I found a passion for IT and switched my major from Accounting to Information Systems.  I love building things.  For me, programming new applications and websites doesn't feel like work, so I decided to make it my career.</p>
                 <!--<p>3rd paragraph</p>-->
@@ -180,25 +180,25 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Education</span></h2>
                      <div class="spacer"></div>
-                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">I graduated with Cum Laude honors with a BS in Information Systems from University of Utah's David Eccles School of Business. </p>
                 </header>
                 <div class="row">
                  <div class="col-md-6">
                   <article class="education">
                     <header>
-                      <h3>School of the Art Institute of Chicago</h3>
-                      <p>Bachelor of Fine Arts - <strong>Graduated:</strong> 2004</p>
+                      <h3>University of Utah</h3>
+                      <p>BS in Business Information Systems - <strong>Graduated:</strong> 2014</p>
                     </header>
-                      <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                      <p>I completed several business-related courses in the disciplines of Accounting, Finance, and Management.  My core classes consisted of Java programming, Web Development using PHP and MySQL, Database Fundamentals using Oracle, Networking and Windows Servers, Security, and Project Management.  I graduated with honors in the 98th Percentile of my class in the School of Business.</p>
                   </article>
                 </div>
                 <div class="col-md-6">
                 <article class="education">
                   <header>
-                    <h3>Rhode Island School of Design</h3>
-                    <p>Associates of Fine Arts  - <strong>Graduated:</strong> 2002</p>
+                    <h3>Coding Campus 18-Week Program</h3>
+                    <p>Web Development Bootcamp  - <strong>Completion:</strong> Dec. 2014</p>
                   </header>
-                    <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                    <p>Enter information about coding campus here.</p>
                 </article>
                 </div>
             </div>
@@ -210,34 +210,34 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Experience</span></h2>
                      <div class="spacer"></div>
-                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">Places I've worked...</p>
                 </header>
                 <div class="row">
                  <div class="col-md-4">
                   <article class="experience">
                     <header>
-                      <h3>Dropbox</h3>
-                      <p>Design Lead / San Francisco, CA / 2013 - Current</p>
+                      <h3>Robert Half Technology</h3>
+                      <p>Recruiting Manager / Lehi, UT / June 2014 - Current</p>
                     </header>
-                      <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                      <p>Enter information about Robert Half (copy from LinkedIn profile).</p>
                   </article>
                 </div>
                   <div class="col-md-4">
                   <article class="experience">
                     <header>
-                      <h3>Instagram</h3>
-                       <p>Visual Designer / San Francisco, CA / 2010 - 2013</p>
+                      <h3>Central Refrigerated Service</h3>
+                       <p>Recruiting Manager / West Valley City, UT / March 2008 - June 2014</p>
                     </header>
-                      <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                      <p>Information about Central Ref.</p>
                   </article>
                 </div>
                 <div class="col-md-4">
                 <article class="experience">
                   <header>
-                    <h3>Facebook</h3>
-                     <p>Product Designer / San Francisco, CA / 2005 - 2010</p>
+                    <h3>Drivers Choice Services</h3>
+                     <p>Director of Recruiting - Branch Manager / Salt Lake City, UT / February 2007 - March 2008</p>
                   </header>
-                    <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                    <p>Enter info about Drivers Choice.</p>
                 </article>
                 </div>
             </div>
@@ -248,9 +248,9 @@
           <div class="container">
             <div class="row">
                 <header class="section-header">
-                    <h2 class="section-title"><span>Portfolio</span></h2>
+                    <h2 class="section-title" id="portfolio-title"><span>Portfolio</span></h2>
                       <div class="spacer"></div>
-                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle" id="portfolio-subtitle">Some examples of my work...</p>
                 </header>
            
                 <div id="grid-controls-wrapper">
