updated url for gymjones link

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 </div>
                             </div><img src="img/portfolio/large/emeripreppic.png" alt="" ></a></li>
                       <li class="mix web">
-                        <a href="http://localhost:63342/gym_jones/src/index.html" target="_blank">
+                        <a href="http://gymjones.mymattjensen.com/" target="_blank">
                             <div class="overlay">
                                 <div>
                                     <ul>
